--- a/content/posts/WHR-2019.Rmd
+++ b/content/posts/WHR-2019.Rmd
@@ -95,7 +95,7 @@ box <- ggplot(whr19, aes(Region, Score)) +
   coord_flip() + 
   theme_minimal()
 
-box #interactive
+box 
 ```
 
 The boxplot shows the variation in Score across the different regions. The highest variations are in the Middle East and Europe. A potential reason for this may be due to the large disparity between the very rich and poor countries in both regions. The lowest range of scores are in Africa, and the highest scoring country belongs to the European region. Oceania has the lowest variation as it is only comprised of two countries. 
