--- a/content/posts/AntiDep.Rmd
+++ b/content/posts/AntiDep.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Antidepressants in the UK: Exploring Prescription Data"
+title: "Antidepressants in the UK - Exploring Prescription Data"
 output: html_notebook
 ---
 
