--- a/content/posts/Finance-Portfolio-Analysis.Rmd
+++ b/content/posts/Finance-Portfolio-Analysis.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Finance and Data Analysis: Portfolio Optimization and Returns"
+title: "Finance and Data Analysis - Portfolio Optimization and Returns"
 output: html_notebook
 ---
 
